# Flux-DFT

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISTRIBUTION.md  FluxDFT.bat  LICENSE  README.md  README_LINUX.md  SECURITY.md  gallery.md  mock_si.cif  pyproject.toml  requirements.txt
mock_data/: Fe_bcc.cif  GaAs.cif  si.bands.gnu  si.dos  si.matdyn.dos  si.matdyn.freq  si.scf.out
scripts/: check_versions.py  debug_versions.py  probe_mp_api.py  setup_mp_key.py  verify_ai_client.py  verify_graphing.py  verify_mp_data.py  verify_physics.py  verify_supercell.py
scripts/verification_physics/: silicon.hse.in  silicon.ph.in
src/: test.cif  test_cif.py
src/fluxdft/: __init__.py  main.py
src/fluxdft/ai/: __init__.py  core.py  prompts.py
src/fluxdft/analysis/: __init__.py  charge.py
src/fluxdft/cloud/: client.py
src/fluxdft/core/: __init__.py  analysis.py  def_parser.py  hpc.py  input_builder.py  job_runner.py  output_parser.py  pseudo_manager.py  scf_generator.py  smart_pseudo.py  ssh_client.py  structure_importer.py  structure_loader.py  structure_logger.py  structure_model.py
src/fluxdft/electronic/: __init__.py  advanced_effmass.py  analysis.py  band_structure.py  dos.py  effective_mass.py  fatbands.py  fermi_surface.py  optical.py
src/fluxdft/execution/: engine.py
src/fluxdft/integrations/: __init__.py  mp_client.py
src/fluxdft/intelligence/: __init__.py  inference.py
src/fluxdft/io/: __init__.py  qe_input.py  qe_output.py  qe_parser.py
src/fluxdft/materials_project/: __init__.py  cache.py  client.py  comparator.py
src/fluxdft/phonon/: __init__.py  phonon.py
tests/: test_core.py  test_electronic.py  test_input_builder_extended.py  test_output_parser.py  test_phonon.py
(+92 files in other folders)
