[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluxdft"
version = "2.0.0"
description = "Professional GUI for Quantum ESPRESSO with AI-powered analysis, 3D visualization, HPC job management, and automated post-processing."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Basim Nasser"}
]
keywords = ["quantum-espresso", "dft", "physics", "gui", "materials-science", "simulation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "PyQt6>=6.5.0",
    "PyQt6-WebEngine>=6.5.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "paramiko>=3.3.0",
    "pyvista>=0.42.0",
    "pyvistaqt>=0.11.0",
    "ase>=3.22.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.2.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
fluxdft = "fluxdft.main:main"

[project.gui-scripts]
fluxdft = "fluxdft.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
